--- a/src/components/styles/Banner.scss
+++ b/src/components/styles/Banner.scss
@@ -1,27 +1,17 @@
 @import "../../styles/variables.scss";
 .banner {
   width: 100%;
+  height: 100%;
+  min-height: 938px;
   display: flex;
   justify-content: center;
   position: relative;
+  overflow: hidden;
 }
 
-.banner > * {
-  z-index: 100;
-}
-
-.banner::after {
-  content: url("../../assets/svg/banner__background.svg");
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
 .banner__container {
   width: 100%;
-  padding: 40px 20px 20px;
+  padding: 80px 20px;
   display: flex;
   flex-direction: column;
 }
@@ -52,24 +42,16 @@
 .banner__svg img {
   max-width: 500px;
   width: 100%;
+  padding: 50px 0;
 }
 
 @media screen and (min-width: 1500px) {
-  .banner::after {
-    content: "";
-    position: absolute;
-    background-image: url("../../assets/svg/banner__background.svg");
-    background-color: $positive-color;
-    background-repeat: no-repeat;
-    background-size: cover;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
+  .banner{
+    min-height: auto;
   }
 }
 @media screen and (min-width: 900px) {
+
   .banner__container {
     max-width: 1200px;
     width: 100%;
