--- a/src/components/styles/Banner.scss
+++ b/src/components/styles/Banner.scss
@@ -2,7 +2,7 @@
 .banner {
   width: 100%;
   height: 100%;
-  min-height: 938px;
+  // min-height: 938px;
   display: flex;
   justify-content: center;
   position: relative;
@@ -11,7 +11,7 @@
 
 .banner__container {
   width: 100%;
-  padding: 80px 20px;
+  padding: 80px 30px;
   display: flex;
   flex-direction: column;
 }
@@ -22,7 +22,7 @@
 }
 
 .banner__profession {
-  font-size: 28px;
+  font-size: $subtitle-size;
   letter-spacing: 0.035em;
   color: #fff;
 }
@@ -51,7 +51,6 @@
   }
 }
 @media screen and (min-width: 900px) {
-
   .banner__container {
     max-width: 1200px;
     width: 100%;
@@ -65,5 +64,10 @@
   .banner__svg img {
     width: 500px;
     height: 500px;
+  }
+}
+@media screen and (min-width: 700px) {
+  .banner__container {
+    padding: 80px 60px;
   }
 }
