--- a/src/components/styles/Project.scss
+++ b/src/components/styles/Project.scss
@@ -19,7 +19,7 @@
     box-sizing: border-box;
     border-radius: 0 0 25px 25px;
     padding: 10px 20px;
-    border-top: 1px solid rgba($color: $dark-text, $alpha: 0.4);
+    border-top: 1px solid rgba($color: #000000, $alpha: 0.4);
     h2 {
       text-align: left;
       color: $dark-text;
