--- a/src/components/styles/Project.scss
+++ b/src/components/styles/Project.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles/animations.scss";
 .project {
   margin-top: 30px;
   width: 100%;
@@ -11,36 +12,41 @@
   -moz-box-shadow: 0px 4px 12px -3px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 4px 12px -3px rgba(0, 0, 0, 0.75);
   border-radius: 15px;
-  .project__image {
-    width: 100%;
-  }
-  .project__description {
-    width: 100%;
-    box-sizing: border-box;
-    border-radius: 0 0 25px 25px;
-    padding: 10px 20px;
-    border-top: 1px solid rgba($color: #000000, $alpha: 0.4);
-    h2 {
-      text-align: left;
-      color: $dark-text;
-      margin-top: 5px;
+  .project__container {
+    @include animation(1.2s, fadeIn, both);
+    .project__image {
+      width: 100%;
     }
-    p {
-      text-align: left;
-      color: $dark-text;
-      margin-top: 2px;
+    .project__description {
+      width: 100%;
+      box-sizing: border-box;
+      border-radius: 0 0 25px 25px;
+      padding: 10px 20px;
+      border-top: 1px solid rgba($color: #000000, $alpha: 0.4);
+      h2 {
+        text-align: left;
+        color: $dark-text;
+        margin-top: 5px;
+      }
+      p {
+        text-align: left;
+        color: $dark-text;
+        margin-top: 2px;
+      }
     }
   }
 }
 
 @media screen and (min-width: 700px) {
   .project {
-    .project__description {
-      h2 {
-        margin-top: 10px;
-      }
-      p {
-        margin-top: 10px;
+    .project__container {
+      .project__description {
+        h2 {
+          margin-top: 10px;
+        }
+        p {
+          margin-top: 10px;
+        }
       }
     }
   }
