Projects with animations

--- a/src/components/styles/ListOfFeatures.scss
+++ b/src/components/styles/ListOfFeatures.scss
@@ -12,7 +12,7 @@
     height: 140px;
     padding: 10px;
     border-radius: 50%;
-    background-color: $positive-color;
+    background-color: $dark-text;
     position: relative;
     box-sizing: border-box;
     img {
