--- a/src/components/styles/Project.scss
+++ b/src/components/styles/Project.scss
@@ -1,6 +1,7 @@
 @import "../../styles/variables.scss";
 @import "../../styles/animations.scss";
 .project {
+  position: relative;
   margin-top: 30px;
   width: 100%;
   overflow: hidden;
@@ -12,6 +13,7 @@
   -moz-box-shadow: 0px 4px 12px -3px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 4px 12px -3px rgba(0, 0, 0, 0.75);
   border-radius: 15px;
+  z-index: 1;
   .project__container {
     @include animation(1.2s, fadeIn, both);
     .project__image {
@@ -21,8 +23,8 @@
       width: 100%;
       box-sizing: border-box;
       border-radius: 0 0 25px 25px;
-      padding: 10px 20px;
-      border-top: 1px solid rgba($color: #000000, $alpha: 0.4);
+      padding: 10px 20px 0 20px;
+      border-top: 1px solid rgba($color: #000000, $alpha: 0.2);
       h2 {
         text-align: left;
         color: $dark-text;
@@ -34,18 +36,59 @@
         margin-top: 2px;
       }
     }
+    .project__links {
+      position: static;
+      display: flex;
+      padding: 0 14px 10px 14px;
+      .link {
+        margin-right: 8px;
+        padding: 6px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: hsla(0, 0%, 100%, 0.411);
+        border: 1px solid hsla(0, 0%, 100%, 0.637);
+        border-radius: 50%;
+        transition: 0.3s all ease;
+        img {
+          width: 20px;
+          height: 20px;
+        }
+      }
+      .link:hover {
+        background: hsl(0, 0%, 100%);
+      }
+    }
   }
 }
 
 @media screen and (min-width: 700px) {
   .project {
+    max-width: 800px;
     .project__container {
+      .project__image {
+        opacity: 0.7;
+        transition: 0.3s all ease;
+      }
+      .project__image:hover {
+        opacity: 1;
+      }
       .project__description {
         h2 {
           margin-top: 10px;
         }
         p {
           margin-top: 10px;
+        }
+      }
+      .project__links {
+        position: absolute;
+        display: flex;
+        z-index: 1000;
+        top: 10px;
+        right: 10px;
+        .link {
+          margin: 8px;
         }
       }
     }
