--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,8 @@ $emphasis-color: #d4f21b;
 $primary-color: #00fff8;
 $positive-color: #0d87ff;
 $negative-color: #0dff6e;
-$dark-text: #0b57a1;
+$dark-text: #0a3f74;
+// $darker: #0b57a1;
 
 $title-size: 48px;
 $subtitle-size: 24px;
