--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $primary-color: #00fff8;
 $positive-color: #0d87ff;
 $negative-color: #0dff6e;
 $dark-text: #0a3f74;
+$gray: #051f3a;
 // $darker: #0b57a1;
 
 $title-size: 48px;
