--- a/src/components/styles/Footer.scss
+++ b/src/components/styles/Footer.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles/animations.scss";
 .footer {
   width: 100%;
   position: relative;
@@ -14,6 +15,7 @@
     width: 100%;
     z-index: 100;
     position: relative;
+    // @include animation(.7s, fadeInLeft, both);
     .footer__links {
       display: flex;
       justify-content: center;
@@ -25,6 +27,12 @@
         height: 32px;
       }
     }
+  }
+  .fadeInLeft {
+    @include animation(0.7s, fadeInLeft, both);
+  }
+  .fadeOutRight {
+    @include animation(0.7s, fadeOutRight, both);
   }
   .footer__container > * {
     color: #fff;
